[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Backgr.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Desk1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Desk2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/shutter.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.485, 30.8219 )

[node name="Node2D" type="Node2D"]

[node name="SpriteController" type="Node2D" parent="."]

[node name="Backgr" type="Sprite" parent="SpriteController"]
position = Vector2( 255, 255 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Desk1" type="Sprite" parent="SpriteController"]
position = Vector2( 256, 256 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Desk2" type="Sprite" parent="SpriteController"]
visible = false
position = Vector2( 256, 256 )
z_index = 10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Area2D" parent="SpriteController"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteController/Button"]
visible = false
position = Vector2( 484.817, 124.707 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SpriteController/Button"]
visible = false
position = Vector2( 484.817, 68.3546 )
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="input_event" from="SpriteController/Button" to="SpriteController/Button" method="_on_Button_input_event"]
